# lbd-systematic-review

./: .gitignore  CLAUDE.md  pyproject.toml
config/: settings.yaml
config/LBD categorization schema/: LBD categorization scheme.md  LBD_categorization_guide.md  LBD_categorization_prompt.md  LBD_categorization_quick_reference.md  README_categorization.md  categorization_schema.json  sample_categorizations.json
scripts/: download_papers.py
src/: browser_download.py  doi.py  download.py  europepmc.py  manifest.py  scholar.py  unpaywall.py  vpn.py
src/core/: file_paths.py  log.py
